--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-panda-syntax",
   "theme": "syntax",
   "version": "0.1.0",
-  "description": "Panda syntax theme for Atom Material Dark, Atom Dark, One Dark and other Dark Syntax Theme.",
+  "description": "Panda syntax theme for Atom Material Dark, Atom Dark, One Dark and other Dark Theme.",
   "keywords": [
     "syntax",
     "dark",
