--- a/package.json
+++ b/package.json
@@ -16,5 +16,30 @@
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
+  },
+  "scripts": {
+    "start": "webpack-dev-server --devtool eval --progress --hot --colors",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+  },
+  "dependencies": {
+    "autoprefixer": "^6.3.3",
+    "babel-core": "^6.7.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "open-browser-webpack-plugin": "0.0.2",
+    "postcss-loader": "^0.8.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.6.2",
+    "precss": "^1.4.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7"
   }
 }
