--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "open-browser-webpack-plugin": "0.0.2",
+    "postcss-color-mix": "^1.1.0",
     "postcss-loader": "^0.8.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
